deployment/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: application
  name: base
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8080"
    prometheus.io/path: "/metrics"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: base
  template:
    metadata:
      labels:
        app: base
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: base
          image: hoanghs120/base-amd64:latest
          ports:
            - containerPort: 8080
