deployment/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: application
  name: base-service
spec:
  type: ClusterIP
  selector:
    app: base
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
