deployment/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base-ingress
  namespace: application
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - harryle.xyz
      secretName: my-app-tls
  rules:
    - host: harryle.xyz
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: base-service
                port:
                  number: 80
